unidad08/service_backend.yml
apiVersion: v1
kind: Service
metadata: 
  name: backend-svc
spec:
  type: ClusterIP
  selector:
    app: k8s4arch-hotels-backend
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 5000
