unidad08/ingress_frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: public
  name: frontend-ingress
spec:
  rules:
  - host: awesome-hotels.internal.itrip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: frontend-svc
            port:
              number: 80
